--- a/package.json
+++ b/package.json
@@ -1,17 +1,8 @@
 {
   "name": "react-native-lightbox",
   "version": "0.0.1",
-  "private": true,
   "dependencies": {
-    "events": "^2.0.0",
-    "react": "16.3.1",
-    "react-native": "0.55.3"
-  },
-  "devDependencies": {
-    "babel-jest": "22.4.3",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "22.4.3",
-    "react-test-renderer": "16.3.1"
+    "events": "^2.0.0"
   },
   "jest": {
     "preset": "react-native"
